--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>Defcon 574/title>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="./Images/defcon_RIF_icon.ico" type="image/x-icon" />
-  <link href="./style.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="defcon_RIF_icon.ico" type="image/x-icon" />
+  <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="robots" content="noindex,nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
