--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title>Defcon 574/title>
+  <title>Defcon 574</title>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="defcon_RIF_icon.ico" type="image/x-icon" />
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="./Images/defcon_RIF_icon.ico" type="image/x-icon" />
+  <link href="./style.css" rel="stylesheet" type="text/css">
   <meta name="robots" content="noindex,nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -16,14 +16,14 @@
       <h1> Welcome to DC574's official site. <br> A home for hackers, tech lovers, and curious humans.</h1>
       <nav>
          <a href="./">Past and Future Meetings</a> |
-         <a href="" target="_blank">DC574's Twitter</a> |
-         <a href="" target="_blank">Facebook Page</a> |
-         <a href="./">About Us</a>
+         <a href="" target="_blank">Social Media</a> |
+         <a href="" target="_blank">About Us</a> |
+         <a href="./">Contact</a>
       </nav>
     </main>
     <br>
     <footer>
-      <small> (2018-2019) Squiddy </small>
+      <small> (2019) Squiddy </small>
     </footer>
     <br>
   </section>
