--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <main>
       <h1> Welcome to DC574's official site. <br> A home for hackers, tech lovers, and curious humans.</h1>
       <nav>
-         <a href="./">Past and Future Meetings</a> |
-         <a href="" target="_blank">Social Media</a> |
+         <a href="">Past and Future Meetings</a> |
+         <a href="https://twitter.com/defcon574" target="_blank">Social Media</a> |
          <a href="" target="_blank">About Us</a> |
-         <a href="./">Contact</a>
+         <a href="">Contact</a>
       </nav>
     </main>
     <br>
