--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
   <section>
     <main>
-      <h1> Welcome to DC574's official site. <br> A home for hackers, tech lovers, and curious humans.</h1>
+      <h1> Welcome to <span> DC574's </span> official site. </h1> <h2><em> For hackers, tech lovers, and curious humans.</em> </h2>
+<img src="cutecorn(4).png">
       <nav>
-         <a href="">Past and Future Meetings</a> |
-         <a href="https://twitter.com/defcon574" target="_blank">Social Media</a> |
+         <a href="./">Meetings</a> |
+         <a href="" target="_blank">Social Media</a> |
          <a href="" target="_blank">About Us</a> |
-         <a href="">Contact</a>
+         <a href="./">Contact</a>
       </nav>
     </main>
     <br>
