--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
          <a href="./">Meetings</a> |
          <a href="" target="_blank">Social Media</a> |
          <a href="" target="_blank">About Us</a> |
-         <a href="./">Contact</a>
+         <a href="./contact.html">Contact</a>
       </nav>
     </main>
     <br>
