--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
          <a href="./">Meetings</a> |
          <a href="" target="_blank">Social Media</a> |
-         <a href="" target="_blank">About Us</a> |
+         <a href="" target="_blank">About</a> |
          <a href="./contact.html">Contact</a>
       </nav>
     </main>
