--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <img src="cutecorn(4).png">
       <nav>
          <a href="./">Meetings</a> |
-         <a href="" target="_blank">Social Media</a> |
+         <a href="https://twitter.com/defcon574" target="_blank">Social Media</a> |
          <a href="" target="_blank">About</a> |
          <a href="./contact.html">Contact</a>
       </nav>
