--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,7 @@
 
 <body>
 <h1> For questions, and additional information: </h1>
-<ul>
-  <li> DC574(at)protonmail.com </li>
-  <li> vmdeus(at)pm.me </li>
-  <li> DM us on Twitter @defcon574 </li>
+<h2> DC574(at)protonmail.com or DM us on Twitter @defcon574 </h2>
 </body>
 
 </html>
