--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1> For questions, and additional information: </h1>
+<h1> For questions, concerns, and additional information: </h1>
 <h2> DC574(at)protonmail.com or DM us on Twitter @defcon574 </h2>
 </body>
 
