--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
 <h1> For questions, concerns, and additional information: </h1>
-<h2> DC574(at)protonmail.com or DM us on Twitter @defcon574 </h2>
+<h2> Contact us at DC574(at)protonmail.com or DM us on Twitter @defcon574 </h2>
 </body>
 
 </html>
