--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <h1> Welcome to <span> DC574's </span> official site. </h1> <h2><em> For hackers, tech lovers, and curious humans.</em> </h2>
 <img src="cutecorn(4).png">
       <nav>
-         <a href="./">Meetings</a> |
+         <a href="./meetings.html">Meetings</a> |
          <a href="https://twitter.com/defcon574" target="_blank">Social Media</a> |
-         <a href="" target="_blank">About</a> |
+         <a href="./about.html" target="_blank">About</a> |
          <a href="./contact.html">Contact</a>
       </nav>
     </main>
