--- a/about.html
+++ b/about.html
@@ -10,15 +10,17 @@
 </head>
 
 <body>
-<h1> We are a computer security group open to individuals interested in computer science, security <br>
+  <h1> About Us.. </h1> 
+  <p id="info">
+  We are a computer security group open to individuals interested in computer science, security,
   computer engineering, lockpicking, social engineering, biohacking, and all things hackerish. <br>
   Regardless of your current skill level or knowledge of these topics you are welcome to join and share topics <br>
   that align with these interests that you are passionate about. <br>
-
+<br>
   We have a strict code of conduct. Sexual harassment, abusive or unsettling behavior, discrimination against individuals based on <br>
   sex, race, religion, sexual orientation, etc will result in a ban from DC574. <br>
   We have one rule: Don't be an asshole. <br>
   If you can follow that rule and our code of conduct you are welcome in DC574. <br>
-  We are also a radical feminist meetup, and open to rad fems at our meetings. </h1>
+  We are also a radical feminist meetup, and open to rad fems at our meetings. </p>
   </body>
 </html>
