--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>About US</title>
+  <title>About</title>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="defcon_RIF_icon.ico" type="image/x-icon" />
   <link href="./style.css" rel="stylesheet" type="text/css">
@@ -13,7 +13,7 @@
   <h1> About Us.. </h1> 
   <p id="info">
   We are a computer security group open to individuals interested in computer science, security,
-  computer engineering, lockpicking, social engineering, biohacking, and all things hackerish. <br>
+  computer engineering,<br> lockpicking, social engineering, biohacking, and all things hackerish. <br>
   Regardless of your current skill level or knowledge of these topics you are welcome to join and share topics <br>
   that align with these interests that you are passionate about. <br>
 <br>
