--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Defcon 574</title>
+  <title>DC574</title>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="defcon_RIF_icon.ico" type="image/x-icon" />
   <link href="./style.css" rel="stylesheet" type="text/css">
