--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>
     <br>
     <footer>
-      <small> (2019) Squiddy </small>
+      <small> (2019) Squiddy <a rel="me" href="https://spinster.xyz/@Squiddy">Gab Social</a> </small>
     </footer>
     <br>
   </section>
