--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="defcon_RIF_icon.ico" type="image/x-icon" />
   <link href="./style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <a rel="me" href="https://spinster.xyz/@Squiddy">Gab Social</a> 
 </head>
 
 <body>
@@ -23,7 +24,7 @@
     </main>
     <br>
     <footer>
-      <small> (2019) Squiddy <a rel="me" href="https://spinster.xyz/@Squiddy">Gab Social</a> </small>
+      <small> (2019) Squiddy</small>
     </footer>
     <br>
   </section>
