--- a/about.html
+++ b/about.html
@@ -21,6 +21,6 @@
   sex, race, religion, sexual orientation, etc will result in a ban from DC574. <br>
   We have one rule: Don't be an asshole. <br>
   If you can follow that rule and our code of conduct you are welcome in DC574. <br>
-  We are also a radical feminist meetup, and open to rad fems at our meetings. </p>
+  We are also a radical feminist meetup, and open to rad fems at our meetings. <a rel="me" href="https://spinster.xyz/@Squiddy">Gab Social</a> </p>
   </body>
 </html>
