--- a/meetings.html
+++ b/meetings.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="defcon_RIF_icon.ico" type="image/x-icon" />
   <link href="./style.css" rel="stylesheet" type="text/css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes">
 </head>
 <body>
   <h1> Coming Soon </h1>
