--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="defcon_RIF_icon.ico" type="image/x-icon" />
   <link href="./style.css" rel="stylesheet" type="text/css">
+  <a rel="me" href="https://cliterati.club/@Squiddy">Mastodon</a>
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes">
 </head>
 
