--- a/meetings.html
+++ b/meetings.html
@@ -8,6 +8,33 @@
   <link href="./style.css" rel="stylesheet" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes">
 </head>
+  <main>
+    <table>
+    
+<tr>
+	 <th>When </th>
+	 <th>Where </th>
+	 <th>Topic</th>
+</tr>
+      <tr>
+	<td>December 16, 2020 (TIME TBD)</td>
+	<td>Franklin D. Schurz Library</td>
+	<td>Squiddy/VM_DEUS</td>
+	<td>DEFCON? Lock-Picking Basics </td>
+</tr>
+      
+<tr>
+	 <th>When </th>
+	 <th>Where </th>
+	 <th>Topic</th>
+</tr>
+      <tr>
+	<td>December 18, 2020 (TIME TBD)</td>
+	<td>Franklin D. Schurz Library (room TBD)</td>
+	<td>NA</td>
+	<td>WarGames (Movie)</td>
+</tr> 
+      </main>
 <body>
   <h1> Coming Soon </h1>
   </body>
