--- a/meetings.html
+++ b/meetings.html
@@ -21,7 +21,7 @@
 	<td>December 16, 2020 (TIME TBD)</td>
 	<td>Franklin D. Schurz Library</td>
 	<td>Squiddy/VM_DEUS</td>
-	<td>DEFCON? Lock-Picking Basics </td>
+	<td>DEFCON?</td>
 </tr>
       
 <tr>
