--- a/meetings.html
+++ b/meetings.html
@@ -11,24 +11,24 @@
   <main>
     <table>
     
-<tr>
+<tr align="right">
 	 <th>When </th>
 	 <th>Where </th>
 	 <th>Speaker </th>
 	 <th>Topic</th>
 </tr>
-      <tr>
+      <tr align="right">
 	<td>Jan 16, 2020 (5PM-6PM)</td>
 	<td>Franklin D. Schurz Library</td>
 	<td>Squiddy/VM_DEUS</td>
 	<td>DEFCON</td>
 </tr>
       
-<tr>
+<tr align="right">
 	 <th>When </th>
 	 <th>Where </th>
 	 <th>Topic</th>
-</tr>
+</tr align="right">
       <tr>
 	<td>Jan 22, 2020 (4PM)</td>
 	<td>Franklin D. Schurz Library (room TBD)</td>
