--- a/meetings.html
+++ b/meetings.html
@@ -31,7 +31,7 @@
 </tr>
       <tr>
 	<td>Jan 22, 2020 (4PM)</td>
-	<td>Franklin D. Schurz Library (meet in New Book Room)</td>
+	<td>Vera Z. Dwyer college of Health Sciences</td>
 	<td>NA</td>
 	<td>WarGames (Movie)</td>
 </tr> 
