--- a/meetings.html
+++ b/meetings.html
@@ -35,8 +35,20 @@
 	<td>NA</td>
 	<td>WarGames (Movie)</td>
 </tr> 
+	    <tr>
+	 <th>When </th>
+	 <th>Where </th>
+	 <th>Speaker </th>
+	 <th>Topic</th>
+</tr>
+      <tr>
+	<td>Jan 20, 2020 (4:45PM-6:30PM)</td>
+	<td>Franklin D. Schurz Library</td>
+	<td>Squiddy/VM_DEUS</td>
+	<td>Lockpick Session!</td>
+</tr>
+      
       </main>
 <body>
-  <h1> Coming Soon </h1>
   </body>
   </html>
