--- a/meetings.html
+++ b/meetings.html
@@ -45,7 +45,7 @@
 	<td>Jan 20, 2020 (4:45PM-6:30PM)</td>
 	<td>Franklin D. Schurz Library</td>
 	<td>Squiddy/VM_DEUS</td>
-	<td>  Lockpick Session!</td>
+	<td>&nbsp; &nbsp;Lockpick Session!</td>
 </tr>
       
       </main>
