--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </main>
     <br>
     <footer>
-      <small> (2019) Squiddy</small>
+      <small> (2019-2020) Squiddy/VM_DEUS</small>
     </footer>
     <br>
   </section>
