--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@
 <br>
   We have a strict code of conduct. Sexual harassment, abusive or unsettling behavior, discrimination against individuals based on <br>
   sex, race, religion, sexual orientation, etc will result in a ban from DC574. <br>
-  We have one rule: Don't be an asshole. <br>
+  Don't be an asshole. <br>
   If you can follow that rule and our code of conduct you are welcome in DC574. <br>
+  DC574 is open to radical feminists and lesbian separatists. 
   </body>
 </html>
