--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     </main>
     <br>
     <footer>
-      <small> (2019-2020) Squiddy/VM_DEUS</small>
+      <small> (2019-2020) Squiddy </small>
     </footer>
     <br>
   </section>
-    <!-- <a rel="me" href="https://cliterati.club/@Squiddy">Mastodon</a> -->
 </body>
 
 </html>
