--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
   sex, race, religion, sexual orientation, etc will result in a ban from DC574. <br>
   Don't be an asshole. <br>
   If you can follow that rule and our code of conduct you are welcome in DC574. <br>
-  DC574 is open to radical feminists and lesbian separatists. 
+  DC574 is open to radical feminists and lesbian separatists. <br>
+  Our meetings are <span>100% online</span> via our hosted Jitsi server. 
   </body>
 </html>
