--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <section>
     <main>
-      <h1> Welcome to <span> DC574's </span> official site. </h1> <h2><em> For hackers, tech lovers, and curious humans.</em> </h2>
+      <h1> Welcome to <span> DC574's </span> official site. </h1> <h2> For hackers, tech lovers, and curious humans.</h2>
 <img src="cutecorn(4).png">
       <nav>
          <a href="./meetings.html">Meetings</a> |
