--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section>
     <main>
       <h1> Welcome to <span> DC574's </span> official site. </h1> <p> For hackers, tech lovers, and curious humans.</p>
-<img src="cutecorn(4).png">
+<img src="./Images/cutecorn.png">
       <nav>
          <a href="./meetings.html">Meetings</a> |
          <a href="https://twitter.com/defcon574" target="_blank">Social Media</a> |
