--- a/meetings.html
+++ b/meetings.html
@@ -21,7 +21,7 @@
       <tr>
 	<td>Jan 16, 2020 (5PM-6PM)</td>
 	<td>Franklin D. Schurz Library</td>
-	<td>Squiddy/VM_DEUS</td>
+	<td>Squiddy</td>
 	<td>DEFCON</td>
 </tr>
       
@@ -46,7 +46,7 @@
       <tr>
 	<td>Feb 20, 2020 (4:45PM-6:30PM)</td>
 	<td>Franklin D. Schurz Library</td>
-	<td>Squiddy/VM_DEUS</td>
+	<td>Squiddy</td>
 	<td>&nbsp; &nbsp;Lockpick Session!</td>
 </tr>
 	  </table>
