--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
          <a href="./meetings.html">Meetings</a> |
          <a href="https://twitter.com/defcon574" target="_blank">Social Media</a> |
-         <a href="./about.html" target="_blank">About</a> |
+         <a href="./about.html">About</a> |
          <a href="./contact.html">Contact</a>
       </nav>
     </main>
