--- a/about.html
+++ b/about.html
@@ -24,6 +24,6 @@
   If you can follow that rule and our code of conduct you are welcome in DC574. <br>
   DC574 is open to radical feminists and lesbian separatists. <br>
   <br>
-  Our meetings are <span>100% online</span> via our hosted Jitsi server. 
+  Our meetings are <span>100% online</span> via our Jitsi server. 
   </body>
 </html>
