--- a/about.html
+++ b/about.html
@@ -18,12 +18,9 @@
   that align with these interests that you are passionate about. <br>
 <br>
   We have a strict code of conduct. Sexual harassment, abusive or unsettling behavior, discrimination against individuals based on <br>
-  sex, race, religion, sexual orientation, etc will result in a ban from DC574. <br>
+  sex, race, religion or sexual orientation, will result in a ban from DC574. <br>
   <br>
   Don't be an asshole. <br>
   If you can follow that rule and our code of conduct you are welcome in DC574. <br>
-  DC574 is open to radical feminists and lesbian separatists. <br>
-  <br>
-  Our meetings are <span>100% online</span> via our Jitsi server. 
   </body>
 </html>
